tests/reject/classClosureSelfBeforeSuperInit.emojic
🐇 🐟 🍇
  🔑 🆕 🍇

  🍉

  ❗️ 🙋 🍇
    😀 🔤I’m a fish.🔤❗️
  🍉
🍉

🐇 🎪 🍇
  🐇❗️ 🕸 fish 🐟 🍇
    😀 🔤Added fish🔤❗️
  🍉
🍉

🐇 🐡 🐟 🍇
  🔑 🆕 🍇
    🍇
      🕸🐇🎪 👇❗️
    🍉 ➡️ test
    ⤴️ 🆕❗️
  🍉

  ✒️ ❗️ 🙋 🍇
    😀 🔤I’m a blowfish.🔤❗️
  🍉
🍉

🏁 🍇
  🆕🐟❗️ ➡️ fish
  🙋 fish❗️
🍉
